--- a/horeb.html
+++ b/horeb.html
@@ -229,17 +229,22 @@
 
             <div class="form-group">
                 <label class="required">Department:</label>
-                <input type="text" id="department" name="department" required placeholder="e.g., Computer Science">
+                <input type="text" id="department" name="department" required placeholder=" Computer Science">
             </div>
 
             <div class="form-group">
                 <label class="required">Year:</label>
-                <input type="text" id="year" name="year" required placeholder="e.g., 3rd year">
+                <input type="text" id="year" name="year" required placeholder=" 3rd year">
             </div>
 
             <div class="form-group">
                 <label class="required">Team:</label>
-                <input type="text" id="team" name="team" required placeholder="e.g., Horeb">
+                <input type="text" id="team" name="team" required placeholder=" Horeb">
+            </div>
+
+            <div class="form-group">
+                <label class="required">Phone Number:</label>
+                <input type="number" id="number" required placeholder=" +251   ">
             </div>
 
             <div class="form-group">
@@ -423,3 +428,4 @@
     </script>
 </body>
 </html>
+
